<resources>
    <string name="app_name">WoW Guild Manager</string>
    <string name="title_activity_guild_interaction">GuildInteraction</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="character_default_raider_io">Raider.io Score: XXXX</string>
    <string name="character_default_ilevel">iLevel: XXX</string>
    <string name="character_default_level">Level: XXX</string>
    <string name="character_default_rank">Rank: X</string>
    <string name="character_default_name">CharName</string>
    <string name="announcement_title_hint">Title</string>
    <string name="announcement_description_hint">Description</string>
    <string name="new_poll_url_hint">Poll URL</string>
    <string name="text_event_date">Today</string>
    <string name="text_event_title">EVENT</string>
    <string name="text_event_description">Event Description</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="title_poll">Poll Title</string>
    <string name="date_poll">1/2/13 - 1/10/13</string>
    <string name="description_poll">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sagittis tortor elit, porta suscipit ante hendrerit vel. Morbi dolor elit, egestas quis magna bibendum, sollicitudin aliquet orci. Cras blandit dui eget leo posuere, sed molestie urna condimentum. Quisque</string>
    <string name="log_in_prompt">Log in with Battle.net</string>
    <string name="guild_name_text">Key Breakers Anonymous</string>
    <string name="guild_realm_text">Stormrage-US</string>
</resources>
