<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#2B2B2B"
    app:strokeColor="@color/colorAccent"
    app:strokeWidth="0.5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/wow_hunter_icon"
            android:layout_margin="10dp"
        />
        <TextView
            android:textSize="20sp"
            android:id="@+id/character_name"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/character_image"
            app:layout_constraintTop_toTopOf="@id/character_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_default_name"
        />
        <TextView
            android:id="@+id/character_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/character_image"
            app:layout_constraintLeft_toLeftOf="@id/character_name"
            app:layout_constraintBottom_toBottomOf="@id/character_image"
            android:textColor="@color/colorTextDescription"
            android:text="@string/character_default_rank"
            />
        <TextView
            android:id="@+id/character_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/character_rank"
            app:layout_constraintLeft_toLeftOf="@id/character_rank"
            android:textColor="@color/colorTextDescription"
            android:text="@string/character_default_level"
            />
        <TextView
            android:id="@+id/character_raider_io"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextDescription"
            android:text="@string/character_default_raider_io"
            app:layout_constraintBottom_toBottomOf="@id/character_rank"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/character_item_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/character_raider_io"
            app:layout_constraintTop_toBottomOf="@id/character_raider_io"
            android:textColor="@color/colorTextDescription"
            android:text="@string/character_default_ilevel"
            android:textAlignment="viewEnd"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>