<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorCardBackground"
    android:layout_marginHorizontal="12dp"
    app:cardCornerRadius="15dp"
    android:layout_marginVertical="6dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/event_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
            android:text="@string/text_event_date"/>
        <View
            android:id="@+id/separator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="100dp"
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"

            />

        <TextView

            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/separator"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="40dp"
            android:textColor="@color/colorTextDescription"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:text="@string/text_event_title"/>
        <TextView
            android:id="@+id/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/event_title"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            android:textColor="@color/colorTextDescription"
            android:textSize="14dp"
            android:text="@string/text_event_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>