<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorCardBackground"
    android:layout_marginHorizontal="12dp"
    app:cardCornerRadius="8dp"
    android:layout_marginVertical="6dp"
    app:strokeWidth="0.5dp"
    app:strokeColor="@color/colorAccent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/title_poll"/>
        <TextView
            android:id="@+id/date_range"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorTextDescription"
            android:textSize="14sp"
            android:text="@string/date_poll"
            android:textAlignment="viewEnd"
            />
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginVertical="8dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintRight_toRightOf="@id/date_range"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/colorTextDescription"
            android:text="@string/description_poll"
            android:lines="2"
            android:lineSpacingExtra="5sp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>