<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/new_poll_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_poll_title_edit_text"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="start date"
        android:textColor="@color/colorAccent"
        android:drawableLeft="@drawable/ic_date_range_pink_24dp"
        />

    <TextView
        android:id="@+id/new_poll_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:drawableLeft="@drawable/ic_date_range_pink_24dp"
        android:text="end date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/new_poll_title_edit_text"
        app:layout_constraintLeft_toRightOf="@id/new_poll_start_date"
        app:layout_constraintRight_toRightOf="parent"
         />

    <EditText
        android:id="@+id/new_poll_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_poll_start_date"
        app:layout_constraintBottom_toTopOf="@id/new_poll_url_edit_text"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:hint="@string/announcement_title_hint"
        android:inputType="textCapWords"
        />

    <EditText
        android:id="@+id/new_poll_url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/new_poll_url_hint"
        android:inputType="textCapWords"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/new_poll_description_edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_poll_title_edit_text"
        />

    <EditText
        android:id="@+id/new_poll_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_poll_url_edit_text"
        app:layout_constraintBottom_toTopOf="@id/create_announcement_checkbox"
        android:textSize="24sp"
        android:hint="@string/announcement_description_hint"
        android:inputType="textCapSentences"
        />

    <CheckBox
        android:id="@+id/create_announcement_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_poll_description_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Create Announcement"
        />

</androidx.constraintlayout.widget.ConstraintLayout>